# zigflow

./: .air.toml  .cruft.json  .dockerignore  .gitignore  .goreleaser.yaml  .licenserc.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  AUTHORS  CLAUDE.md  CNAME  Dockerfile  Makefile  README.md  SECURITY.md  Taskfile.yml  app.js  cloudevents.example.yaml  go.mod  go.sum  index.html  llms.txt  main.go  package-lock.json  package.json  sitemap.xml  skaffold.yaml  toodaloo.md  workflow.example.yaml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  docs.yml  monthly-dependency-updates.yml  (+2 more)
cmd/: generateDocs.go  generateDocs_test.go  root.go  root_test.go  run.go  run_test.go  schema.go  schema_test.go  validate.go  validate_test.go  version.go  version_test.go
designs/: logo.xcf  social.xcf
docs/: .gitignore  CLAUDE.md  docusaurus.config.js  eslint.config.mjs  package-lock.json  package.json  sidebars.js  social.xcf
examples/: README.md
examples/python-large-payload-codec/: README.md  activities.py  codec.py  codec_server.py  pyproject.toml  starter.py  worker.py  workflow.yaml
scripts/: package-lock.json
search/: index.html
ui/: .gitignore  .prettierrc  ARCHITECTURE.md  CLAUDE.md  DEVELOPER_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
(+8018 files in other folders)
